.vendor/dislin/examples/ch/dislin.h

void  fbars  (const double *xray, const double *y1ray, const double *y2ray, 
              const double *y3ray, const double *y4ray, int n);
int   fcha   (double x, int ndig, char *cstr);
void  field  (const double *xray, const double *yray,
              const double *uray, const double *vray, int n, int ivec);
void  field3d (const double *x1ray, const double *y1ray, const double *z1ray,
              const double *x2ray, const double *y2ray, const double *z2ray,
              int n, int ivec);
void  filbox (int nx, int ny, int nw, int nh);
void  filclr (const char *copt);
void  filmod (const char *cmod);
void  filopt (const char *copt, const char *ckey);
int   filsiz (const char *cfl, int *nw, int *nh);
int   filtyp (const char *cfl);
void  filwin (int nx, int ny, int nw, int nh);
void  fitscls (void);
double fitsflt (const char *ckey);
int   fitshdu (int nhdu);
int   fitsimg (unsigned char *iray, int nmax);
int   fitsopn (const char *cfl);
void  fitsstr (const char *ckey, char *cval, int nmax);
int   fitstyp (const char *ckey);
int   fitsval (const char *ckey);
void  fixspc (double xfac);
void  flab3d (void);
int   flen   (double x, int ndig);
void  frame  (int nfrm);
void  frmbar (int nfrm);
void  frmclr (int nclr);
void  frmess (int nfrm);
void  gapcrv (double xgap);
void  gapsiz (double gap, const char *cax);
void  gaxpar (double a1, double a2, const char *copt, const char *cax,
              double *a, double *b, double *org, double *stp, int *ndig);
char *getalf (void);
int   getang (void);
int   getbpp (void);
void  getclp (int *nx, int *ny, int *nw, int *nh);
int   getclr (void);
void  getdig (int *nxdig, int *nydig, int *nzdig);
char *getdsp (void);
char *getfil (void);
void  getgrf (double *a, double *e, double *org, double *step, 
              const char *cax);
int   gethgt (void);
int   gethnm (void);
void  getico (double x, double y, double *xp, double *yp);
void  getind (int index, double *xr, double *xg, double *xb);
void  getlab (char *cx, char *cy, char *cz);
void  getlen (int *nxl, int *nyl, int *nzl);
int   getlev (void);
int   getlin (void);
int   getlit (double xp, double yp, double zp,
              double xn, double yn, double zn);
void  getmat (const double *xray, const double *yray, const double *zray, 
              int n, double *zmat, int nx, int ny, double zval, int *imat,
              double *wmat);
char *getmfl (void);
char *getmix (const char *copt);
void  getor  (int *nx0, int *ny0);
void  getpag (int *nxpag, int *nypag);
long  getpat (void);
int   getplv (void);
void  getpos (int *nxa, int *nya);
void  getran (int *nca, int *nce);
void  getrco (double x, double y, double *xp, double *yp);
void  getres (int *npb, int *nph);
void  getrgb (double *xr, double *xg, double *xb);
void  getscl (int *nxscl, int *nyscl, int *nzscl);
void  getscm (int *ix, int *iy, int *iz);
void  getscr (int *nwidth, int *nheight);
char *getshf (const char *copt);
void  getsp1 (int *nxdis, int *nydis, int *nzdis);
int   trmlen (const char *cstr);