.vendor/dislin/julia/Dislin.jl


function fbars(xray::Vector{Float64}, y1ray::Vector{Float64}, 
                y2ray::Vector{Float64}, y3ray::Vector{Float64}, 
                y4ray::Vector{Float64}, n::Int64)
  ccall((:fbars, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Int32), xray, y1ray, 
          y2ray, y3ray, y4ray, n)
end

function fcha(x::Float64, i::Int64)
  s = Array{UInt8}(undef, 80)
  n = ccall((:fcha, "libdislin_d.so"), Cvoid, (Float64, Int32, Ptr{UInt8}), 
              x, i, s)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  resize!(s, n)
  GC.@preserve s
  return unsafe_string(pointer(s))
end

function field(xray::Vector{Float64}, yray::Vector{Float64}, 
               uray::Vector{Float64}, vray::Vector{Float64}, 
               n::Int64, nvec::Int64)
  ccall((:field, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Int32, Int32), xray, yray, 
          uray, vray, n, nvec)
end

function field3d(x1ray::Vector{Float64}, y1ray::Vector{Float64}, 
                 z1ray::Vector{Float64}, x2ray::Vector{Float64}, 
                 y2ray::Vector{Float64}, z2ray::Vector{Float64}, 
                 n::Int64, nvec::Int64)
  ccall((:field3d, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Ptr{Float64}, Ptr{Float64}, Ptr{Float64},
          Int32, Int32), x1ray, y1ray, z1ray, x2ray, y2ray, z2ray, n, nvec)
end

function filbox(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:filbox, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function filclr(s::String)
  ccall((:filclr, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function filmod(s::String)
  ccall((:filmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function filopt(s1::String, s2::String)
  ccall((:filopt, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function filsiz(s::String)
  i1 = Cint[0]
  i2 = Cint[0]
  n = ccall((:filsiz, "libdislin_d.so"), Int32, (Ptr{UInt8}, Ptr{Cint}, 
              Ptr{Cint}), s, i1, i2)
  return convert(Int64, n), convert(Int64, i1[1]), convert(Int64, i2[1])
end

function filtyp(s::String)
  n = ccall((:filtyp, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  return convert(Int64, n)
end

function filwin(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:filwin, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function fitscls()
  ccall((:fitscls, "libdislin_d.so"), Cvoid, ())
end

function fitsflt(s::String)
  x = ccall((:fitsflt, "libdislin_d.so"), Float64, (Ptr{UInt8}, ), s)
  return x
end

function fitshdu(i::Int64)
  n = ccall((:fitshdu, "libdislin_d.so"), Int32, (Int32,), i)
  return convert(Int64, n)
end

function fitsimg(iray::Vector{UInt8}, nmax::Int64) 
  n = ccall((:fitsimg, "libdislin_d.so"), Int32, (Ptr{UInt8}, Int32),
          iray, nmax)
  return convert(Int64, n)
end

function fitsopn(s::String)
  n = ccall((:fitsopn, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  return convert(Int64, n)
end

function fitsstr(s::String)
  s2 = Array{UInt8}(undef, 257)
  ccall((:fitsstr, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Int32), 
          s, s2, 257)
  n = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s2)
  resize!(s2, n)
  GC.@preserve s2
  return unsafe_string(pointer(s2))
end

function fitstyp(s::String)
  n = ccall((:fitstyp, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  return convert(Int64, n)
end

function fitsval(s::String)
  n = ccall((:fitsval, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s)
  return convert(Int64, n)
end

function fixspc(x::Float64)
  ccall((:fixspc, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function flab3d()
  ccall((:flab3d, "libdislin_d.so"), Cvoid, ())
end

function flen(x::Float64, i::Int64)
  n = ccall((:flen, "libdislin_d.so"), Cvoid, (Float64, Int32, ), x, i)
  return convert(Int64, n)
end

function frame(i::Int64)
  ccall((:frame, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function frmbar(i::Int64)
  ccall((:frmbar, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function frmclr(i::Int64)
  ccall((:frmclr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function frmess(i::Int64)
  ccall((:frmess, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function gapcrv(x::Float64)
  ccall((:gapcrv, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function gapsiz(x::Float64, s::String)
  ccall((:gapsiz, "libdislin_d.so"), Cvoid, (Float64, Ptr{UInt8}), x, s)
end

function gaxpar(v1::Float64, v2::Float64, s1::String, s2::String)
  x1 = Cdouble[0]
  x2 = Cdouble[0]
  x3 = Cdouble[0]
  x4 = Cdouble[0]
  i  = Cint[0]
  ccall((:gaxpar, "libdislin_d.so"), Cvoid, (Float64, Float64, Ptr{UInt8}, 
          Ptr{UInt8}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}, 
          Ptr{Cdouble}, Ptr{Cint}), 
          v1, v2, s1, s2, x1, x2, x3, x4, i)
  return x1[1], x2[1], x3[1], x4[1], convert(Int64, i[1])
end

function getalf()
  p = ccall((:getalf, "libdislin_d.so"), Cstring, ())
  return bytestring(p)
end

function getang()
  n = ccall((:getang, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getbpp()
  n = ccall((:getbpp, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getclp()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  i4 = Cint[0]
  ccall((:getclp, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint},
           Ptr{Cint}), i1, i2, i3, i4)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1]),
         convert(Int64, i4[1])
end

function getclr()
  n = ccall((:getclr, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getdig()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getdig, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getdsp()
  p = ccall((:getdsp, "libdislin_d.so"), Cstring, ())
  return bytestring(p)
end

function getfil()
  p = ccall((:getfil, "libdislin_d.so"), Cstring, ())
  return bytestring(p)
end

function getgrf(s::String)
  x1 = Cdouble[0]
  x2 = Cdouble[0]
  x3 = Cdouble[0]
  x4 = Cdouble[0]
  ccall((:getgrf, "libdislin_d.so"), Cvoid, (Ptr{Cdouble}, Ptr{Cdouble}, 
          Ptr{Cdouble}, Ptr{Cdouble}, Ptr{UInt8}), x1, x2, x3, x4, s)
  return x1[1], x2[1], x3[1], x4[1]
end

function gethgt()
  n = ccall((:gethgt, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function gethnm()
  n = ccall((:gethnm, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getico(x1::Float64, x2::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:getico, "libdislin_d.so"), Cvoid, (Float64, Float64, 
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, xp1, xp2)
  return xp1[1], xp2[1]
end

function getind(i::Int64)
  x1 = Cdouble[0]
  x2 = Cdouble[0]
  x3 = Cdouble[0]
  ccall((:getind, "libdislin_d.so"), Cvoid, (Int32, Ptr{Cdouble}, Ptr{Cdouble}, 
          Ptr{Cdouble}), i, x1, x2, x3)
  return x1[1], x2[1], x3[1]
end

function getlab()
  s1 = Array{UInt8}(undef, 8);
  s2 = Array{UInt8}(undef, 8);
  s3 = Array{UInt8}(undef, 8);
  ccall((:getlab, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8},
          Ptr{UInt8}), s1, s2, s3)
  n1 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s1)
  n2 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s2)
  n3 = ccall((:trmlen, "libdislin_d.so"), Int32, (Ptr{UInt8}, ), s3)
  resize!(s1, n1)
  resize!(s2, n2)
  resize!(s3, n3)
  GC.@preserve s1
  GC.@preserve s2
  GC.@preserve s3
  return unsafe_string(pointer(s1)), unsafe_string(pointer(s2)),
         unsafe_string(pointer(s3))
end

function getlen()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getlen, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getlev()
  n = ccall((:getlev, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getlin()
  n = ccall((:getlin, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getlit(x1::Float64, x2::Float64, x3::Float64, x4::Float64, 
                x5::Float64, x6::Float64)
  n = ccall((:getlit, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, 
              Float64, Float64, Float64), x1, x2, x3, x4, x5, x6)
  return convert(Int64, n)
end

function getmat(xray::Vector{Float64}, yray::Vector{Float64}, 
                zray::Vector{Float64}, n::Int64, zmat::Array{Float64, 2},
                nx::Int64, ny::Int64, zval::Float64)     
  imat = Array{Int32}(undef, nx, ny)
  wmat = Array{Float64}(undef, nx, ny)
  z = Array{Float64}(undef, nx, ny)
  ccall((:getmat, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Ptr{Float64}, Int32, Ptr{Float64}, Int32, Int32, Float64,
          Ptr{Int32},Ptr{Float64}), 
          xray, yray, zray, n, z, nx, ny, zval, imat, wmat)

  transpose!(zmat, z)
  imat = 0
  wmat = 0
  z = 0
end

function getmfl()
  p = ccall((:getmfl, "libdislin_d.so"), Cstring, ())
  return bytestring(p)
end

function getmix(s::String)
  p = ccall((:getmix, "libdislin_d.so"), Cstring, (Ptr{UInt8}, ), s)
  return bytestring(p)
end

function getor()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getor, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getpag()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getpag, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getpat()
  n = ccall((:getpat, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getplv()
  n = ccall((:getplv, "libdislin_d.so"), Int32, ())
  return convert(Int64, n)
end

function getpos()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getpos, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getran()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getran, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getres()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getres, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getrco(x1::Float64, x2::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:getrco, "libdislin_d.so"), Cvoid, (Float64, Float64, 
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, xp1, xp2)
  return xp1[1], xp2[1]
end

function getrgb()
  x1 = Cdouble[0]
  x2 = Cdouble[0]
  x3 = Cdouble[0]
  ccall((:getrgb, "libdislin_d.so"), Cvoid, (Ptr{Cdouble}, Ptr{Cdouble}, 
          Ptr{Cdouble}), x1, x2, x3)
  return x1[1], x2[1], x3[1]
end

function getscl()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getscl, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getscm()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getscm, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end

function getscr()
  i1 = Cint[0]
  i2 = Cint[0]
  ccall((:getscr, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}), i1, i2)
  return convert(Int64, i1[1]), convert(Int64, i2[1])
end

function getshf(s::String)
  p = ccall((:getshf, "libdislin_d.so"), Cstring, (Ptr{UInt8}, ), s)
  return bytestring(p)
end

function getsp1()
  i1 = Cint[0]
  i2 = Cint[0]
  i3 = Cint[0]
  ccall((:getsp1, "libdislin_d.so"), Cvoid, (Ptr{Cint}, Ptr{Cint}, Ptr{Cint}), 
           i1, i2, i3)
  return convert(Int64, i1[1]), convert(Int64, i2[1]), convert(Int64, i3[1])
end
